# mom-stumvoll

./: .gitignore  README.md  docker-compose.yml
Agent/: .gitignore  Agent.sln
Agent/Agent/: Agent.App.csproj  Dockerfile  Program.cs  appsettings.json
Agent/Agent.Core/: Agent.Core.csproj  DeviceWatcher.cs
Agent/Agent.Core/PublishApi/: IPublishApi.cs  PublishApi.cs
Agent/Agent.Core/SystemValueApi/: ISystemValueApi.cs  SystemValueApi.cs
Agent/Agent.SystemValue.Api/: Agent.SystemValue.Api.csproj
Agent/Agent.SystemValue.Api/SystemValueSource/: ISystemValueSource.cs  SystemValueSource.cs
Agent/Agent.SystemValue.Api/Types/: Cpu.cs  CpuLoad.cs  Ram.cs  RamUsage.cs  ServiceEvent.cs
Agent/Agent.SystemValue.Api/Types/Base/: IEvent.cs  IMetric.cs  ISystemValue.cs
Agent/Agent.SystemValue.Mock/: Agent.SystemValue.Mock.csproj
Agent/Agent.SystemValue.Mock/MockSources/Cpu/: CpuValueGenerator.cs  CpuValueSource.cs
Agent/Agent.SystemValue.Mock/MockSources/Generator/: ISystemValueGenerator.cs  SystemValueGenerator.cs
Agent/Agent.SystemValue.Mock/MockSources/Ram/: RamValueGenerator.cs  RamValueSource.cs
Agent/Agent.SystemValue.Mock/MockSources/Services/: ServiceEventGenerator.cs  (+1 more)
Watchdog/: build.gradle.kts  settings.gradle.kts
Watchdog_Rust/: .gitignore  Cargo.toml  build.rs  config.json
Watchdog_Rust/src/: main.rs  system_values.proto
Watchdog_Rust/src/api/: lib.rs  mod.rs  parser.rs
Watchdog_Rust/src/config/: config.rs
Watchdog_Rust/src/system_values/: mod.rs  system_value.rs
Watchdog_Rust/src/watchdog/: mod.rs  watchdog.rs
doc/: architecture.drawio
(+17 files in other folders)
