[package]
name = "Watchdog_Rust"
version = "0.1.0"
authors = ["Felix Stumvoll <felix.stumvoll@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.7.0"
async-amqp = "1.2.0"
lapin = "1.7.0"
async-std = { version = "1.9.0", features = ["attributes", "unstable"] }
anyhow = "1.0.40"
futures-util = "0.3.14"
serde = "1.0.125"
serde_json = "1.0.64"
colour = "0.6.0"
regex = "1.4.6"

[build-dependencies]
prost-build = "0.7.0"
